tests/baselines/reference/objectLiteralShorthandPropertiesAssignmentError.errors.txt
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignmentError.ts(4,43): error TS2322: Type '{ name: 文字; id: 数字; }' is not assignable to type '{ b: 文字; id: 数字; }'.
  Object literal may only specify known properties, and 'name' does not exist in type '{ b: 文字; id: 数字; }'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignmentError.ts(6,72): error TS2322: Type '{ name: 文字; id: 数字; }' is not assignable to type '{ id: 文字; name: 数字; }'.
  Types of property 'id' are incompatible.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignmentError.ts(8,5): error TS2345: Argument of type '{ name: 文字; id: 数字; }' is not assignable to parameter of type '{ name: 文字; id: 真假; }'.
  Types of property 'id' are incompatible.
    Type '数字' is not assignable to type '真假'.


==== tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesAssignmentError.ts (3 errors) ====
    var id: number = 10000;
    var name: string = "my name";
    
    var person: { b: string; id: number } = { name, id };  // error
                                              ~~~~
!!! error TS2322: Type '{ name: 文字; id: 数字; }' is not assignable to type '{ b: 文字; id: 数字; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'name' does not exist in type '{ b: 文字; id: 数字; }'.
    var person1: { name, id };  // ok
    function foo(name: string, id: number): { id: string, name: number } { return { name, id }; }  // error
                                                                           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ name: 文字; id: 数字; }' is not assignable to type '{ id: 文字; name: 数字; }'.
!!! error TS2322:   Types of property 'id' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    function bar(obj: { name: string; id: boolean }) { }
    bar({ name, id });  // error
        ~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ name: 文字; id: 数字; }' is not assignable to parameter of type '{ name: 文字; id: 真假; }'.
!!! error TS2345:   Types of property 'id' are incompatible.
!!! error TS2345:     Type '数字' is not assignable to type '真假'.
    
    